# Empirical_Analysis

./: AE  CMakeLists.txt  Doxyfile  README.md  exec  test.cpp
data/: bubble sort_Full random.txt  bubble sort_non-ascending order.txt  bubble sort_sorted: 75%.txt  insertion sort_sorted: 75%.txt  quick + insertion_Full random.txt  quick + insertion_non-ascending order.txt  quick + insertion_sorted: 50%.txt  quick sort_Full random.txt  quick sort_non-ascending order.txt  quick sort_non-descending order.txt  quick sort_sorted: 25%.txt  quick sort_sorted: 50%.txt  quick sort_sorted: 75%.txt  radix sort_non-descending order.txt  radix sort_sorted: 50%.txt  selection sort_non-descending order.txt  selection sort_sorted: 25%.txt  shell sort_non-descending order.txt  stepsquick sort_Full random.txt  stepsquick sort_non-ascending order.txt  stepsquick sort_non-descending order.txt  stepsquick sort_sorted: 25%.txt  stepsquick sort_sorted: 75%.txt
data/bubble/: bubble sort_non-descending order.txt  bubble sort_sorted: 25%.txt  bubble sort_sorted: 50%.txt  stepsbubble sort_Full random.txt  stepsbubble sort_non-ascending order.txt  stepsbubble sort_non-descending order.txt  stepsbubble sort_sorted: 25%.txt  stepsbubble sort_sorted: 50%.txt  stepsbubble sort_sorted: 75%.txt
data/insertion/: insertion sort_Full random.txt  (+10 more)
include/: .sorting.h.swp  main.h  runner.h  selection.h  sorting.h  useful.h
src/: .bubble.cpp.swp  .main.cpp.swp  .runner.cpp.swp  bubble.cpp  help.cpp  insertion.cpp  main.cpp  merge.cpp  quick.cpp  radix.cpp  runner.cpp  selection.cpp  shell.cpp  variable.cpp
(+56 files in other folders)
